[package]
name = "dedup-cli"
description = "Utility for deduplicating lines of text"
readme = "README.md"
license = "MIT"
repository = "https://github.com/sblundy/dedup-cli"
keywords = ["cli", "text", "terminal"]
categories = ["command-line-utilities"]
version = "0.1.0"
authors = ["Steven Blundy <el_gonzzo@hotmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"

[dev-dependencies]
assert_fs = "0.11.3"
predicates = "1.0.1"